ontol/ontol-compiler/test-cases/error/sequence/ambiguous_infinite_tail.on
def u (
    rel .0..: i64
    rel .1..: text // ERROR overlapping indexes
)
